--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -1,4 +1,4 @@
-<!-- Add this section to your product_detail.html template -->
+<!--  product_detail.html  -->
 
 <!-- Enhanced Product Details with GST -->
 <div class="product-details">
