Updated home.html invoice template added monthly and yearly stock route

--- a/templates/invoice_template.html
+++ b/templates/invoice_template.html
@@ -379,7 +379,7 @@
                     {% endif %}
                 </div>
             </div>
-            <div class="shipping-info">
+            <!-- <div class="shipping-info">
                 <h3>Ship To:</h3>
                 <div class="customer-details">
                     <p><strong>{{ customer.name }}</strong></p>
@@ -394,7 +394,7 @@
                     {% endif %}
                     <p><strong>Phone:</strong> {{ customer.phone }}</p>
                 </div>
-            </div>
+            </div> -->
         </div>
 
         <!-- Invoice Items Table -->
@@ -513,9 +513,9 @@
         </div>
 
         <!-- Terms and Footer -->
-        <div class="invoice-footer">
+        <!-- <div class="invoice-footer">
             <div class="terms-section">
-                
+
             </div>
 
             <div class="signature-section">
@@ -526,7 +526,7 @@
                     <p>Authorized Signatory</p>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <!-- Print Button -->
         <div class="print-section">
