Updated home.html and readme.md

--- a/templates/home.html
+++ b/templates/home.html
@@ -456,7 +456,7 @@
         <!-- Not logged in -->
         <div class="text-center mt-4">
             <a href="/accounts/register/" class="btn btn-primary btn-lg px-5">
-                🚀 Start Your Free Store
+                🚀 Start Your Store
             </a>
             <p class="mt-3">Already have an account? <a href="/accounts/login/">Login here</a></p>
         </div>
